...
        if (_passwordController.text.isEmpty) {
          _passwordError = 'Password is required';
        }
        if (_confirmPasswordController.text.isEmpty) {
          _confirmPasswordError = 'Please confirm your password';
        }
        _generalError = 'Please fill in all fields';
      });
      return;
    }

    if (_nameController.text.length < 2) {
      setState(() {
...
          child: SingleChildScrollView(
            padding: const EdgeInsets.all(24.0),
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.stretch,
              children: [
                const Text(
                  'Create Account',
                  style: TextStyle(
                    fontSize: 40,
                    color:  Color(0xFF1C3E1B),
                    fontWeight: FontWeight.w700,
                  ),
                  textAlign: TextAlign.left,
...
